syntax = "proto3";

package fip.jwks;

service Jwks {
    rpc Delete (JwksDeleteReqDto) returns (JwksResDto);
    rpc Find (JwksFindReqDto) returns (stream JwksResDto);
    rpc FindOne (JwksFindOneReqDto) returns (JwksResDto);
    rpc FindOneRandom (JwksFindOneRandomReqDto) returns (JwksResDto);
    rpc Save (JwksSaveReqDto) returns (JwksResDto);
    rpc Update (JwksUpdateReqDto) returns (JwksResDto);
}

message JwksDeleteReqDto {
    string id = 1;
}

message JwksFindReqDto {
}


message JwksFindOneReqDto {
    string id = 1;
}

message JwksFindOneRandomReqDto {
}

message JwksSaveReqDto {
    string id = 1;
    string private_key = 2;
    string public_key = 3;
}

message JwksUpdateReqDto {
    string id = 1;
    string private_key = 2;
    string public_key = 3;
}

message JwksResDto {
    string id = 1;
    string private_key = 2;
    string public_key = 3;
}
